Fix overflow property in CSS

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
   	height: auto;
   	position: relative;
   	background-color: #fff;
-  	overflow: hidden;
+  	overflow-x: hidden;
   	display: grid;
   	grid-template-columns: repeat(12, 1fr);
   	column-gap: 20px;
